macro/src/snapshots/adze_macro__tests__struct_external_scanner.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[adze::grammar(\"test\")] mod grammar\n    {\n        #[adze::language] pub struct Code { body: Block, } #[adze::external]\n        pub struct IndentToken; pub struct Block\n        {\n            #[adze::leaf(text = \"{\")] _open: (), #[adze::leaf(text = \"}\")]\n            _close: (),\n        }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub struct Code {
        body: Block,
    }
    impl ::adze::Extract<Code> for Code {
        type LeafFn = ();
        const GRAMMAR_NAME: &'static str = "test";
        #[allow(non_snake_case)]
        fn extract(
            node: Option<&::adze::pure_parser::ParsedNode>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| Code {
                body: {
                    ::adze::__private::extract_field::<Block, _>(
                        cursor, source, last_idx, "body", None,
                    )
                },
            })
        }
    }
    pub struct IndentToken;
    impl ::adze::Extract<IndentToken> for IndentToken {
        type LeafFn = ();
        const GRAMMAR_NAME: &'static str = "test";
        #[allow(non_snake_case)]
        fn extract(
            node: Option<&::adze::pure_parser::ParsedNode>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| {
                {
                    ::adze::__private::extract_field::<(), _>(
                        cursor, source, last_idx, "unit", None,
                    )
                };
                IndentToken
            })
        }
    }
    pub struct Block {
        _open: (),
        _close: (),
    }
    impl ::adze::Extract<Block> for Block {
        type LeafFn = ();
        const GRAMMAR_NAME: &'static str = "test";
        #[allow(non_snake_case)]
        fn extract(
            node: Option<&::adze::pure_parser::ParsedNode>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| Block {
                _open: {
                    ::adze::__private::extract_field::<(), _>(
                        cursor, source, last_idx, "_open", None,
                    )
                },
                _close: {
                    ::adze::__private::extract_field::<(), _>(
                        cursor, source, last_idx, "_close", None,
                    )
                },
            })
        }
    }
    include!(concat!(
        env!("OUT_DIR"),
        "/grammar_",
        "test",
        "/parser_",
        "test",
        ".rs"
    ));
    pub fn language() -> &'static ::adze::pure_parser::TSLanguage {
        &LANGUAGE
    }
    pub const LANGUAGE_REF: &'static ::adze::pure_parser::TSLanguage = &LANGUAGE;
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Code`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(input: &str) -> core::result::Result<Code, Vec<::adze::errors::ParseError>> {
        ::adze::__private::parse::<Code>(input, || language())
    }
}
