macro/src/snapshots/adze_macro__tests__struct_repeat_non_empty.snap
---
source: macro/src/lib.rs
assertion_line: 800
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[adze::grammar(\"test\")] mod grammar\n    {\n        #[adze::language] pub struct NumberList\n        { #[adze::repeat(non_empty = true)] numbers: Vec<Number>, } pub struct\n        Number\n        {\n            #[adze::leaf(pattern = r\"\\d+\", transform = |v|\n            v.parse().unwrap())] v: i32\n        }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub struct NumberList {
        numbers: Vec<Number>,
    }
    impl ::adze::Extract<NumberList> for NumberList {
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract(
            node: Option<::adze::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| NumberList {
                numbers: {
                    ::adze::__private::extract_field::<Vec<Number>, _>(
                        cursor, source, last_idx, "numbers", None,
                    )
                },
            })
        }
    }
    pub struct Number {
        v: i32,
    }
    impl ::adze::Extract<Number> for Number {
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract(
            node: Option<::adze::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| Number {
                v: {
                    ::adze::__private::extract_field::<adze::WithLeaf<i32>, _>(
                        cursor,
                        source,
                        last_idx,
                        "v",
                        Some(&|v| v.parse().unwrap()),
                    )
                },
            })
        }
    }
    unsafe extern "C" {
        fn tree_sitter_test() -> ::adze::tree_sitter::Language;
    }
    pub fn language() -> ::adze::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`NumberList`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(input: &str) -> core::result::Result<NumberList, Vec<::adze::errors::ParseError>> {
        ::adze::__private::parse::<NumberList>(input, language)
    }
}
