macro/src/snapshots/adze_macro__tests__struct_word_token.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[adze::grammar(\"test\")] mod grammar\n    {\n        #[adze::language] pub struct Program { name: Identifier, }\n        #[adze::word] pub struct Identifier\n        { #[adze::leaf(pattern = r\"[a-zA-Z_]\\w*\")] _ident: (), }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub struct Program {
        name: Identifier,
    }
    impl ::adze::Extract<Program> for Program {
        type LeafFn = ();
        const GRAMMAR_NAME: &'static str = "test";
        #[allow(non_snake_case)]
        fn extract(
            node: Option<&::adze::pure_parser::ParsedNode>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| Program {
                name: {
                    ::adze::__private::extract_field::<Identifier, _>(
                        cursor, source, last_idx, "name", None,
                    )
                },
            })
        }
    }
    pub struct Identifier {
        _ident: (),
    }
    impl ::adze::Extract<Identifier> for Identifier {
        type LeafFn = ();
        const GRAMMAR_NAME: &'static str = "test";
        #[allow(non_snake_case)]
        fn extract(
            node: Option<&::adze::pure_parser::ParsedNode>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| Identifier {
                _ident: {
                    ::adze::__private::extract_field::<(), _>(
                        cursor, source, last_idx, "_ident", None,
                    )
                },
            })
        }
    }
    include!(concat!(
        env!("OUT_DIR"),
        "/grammar_",
        "test",
        "/parser_",
        "test",
        ".rs"
    ));
    pub fn language() -> &'static ::adze::pure_parser::TSLanguage {
        &LANGUAGE
    }
    pub const LANGUAGE_REF: &'static ::adze::pure_parser::TSLanguage = &LANGUAGE;
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Program`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(input: &str) -> core::result::Result<Program, Vec<::adze::errors::ParseError>> {
        ::adze::__private::parse::<Program>(input, || language())
    }
}
